--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
     "expo": "~52.0.43",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0"
   },
