--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0"
   },
