--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
