--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
     "expo": "~52.0.43",
@@ -27,8 +27,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
-    "expo-image-picker": "~16.0.6"
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
