--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
