--- a/app.json
+++ b/app.json
@@ -17,17 +17,17 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/orchid.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.abigail_br987.wieehackathon"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/orchid.png"
     },
     "extra": {
       "eas": {
-        "projectId": "705bfd06-4c70-4db0-8f7d-7e4577c77f77"
+        "projectId": "8e6ff0b4-bae7-44f0-9662-74067da1a217"
       }
     }
   }
